...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turnup" />

    <ImageButton
        android:id="@+id/location_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/background_done"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_done_button"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/location_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="Location Title"
                android:textColorHint="#d3d3d3"
                android:textColor="@color/white"
...
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:paddingStart="16dp"
                android:src="@drawable/location_icon" />

            <EditText
                android:id="@+id/add_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:hint="Location"
                android:textAlignment="center"
...
