...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/turnup" />

  <com.google.android.gms.common.SignInButton
      android:id="@+id/sign_in_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toTopOf="@+id/guest_button"
      app:layout_constraintEnd_toEndOf="@+id/guest_button"
      app:layout_constraintStart_toStartOf="@+id/guest_button" />

  <Button
      android:id="@+id/guest_button"
      android:layout_width="wrap_content"
...
