<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".EventListActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turnup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbleft"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/left_view_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/left_view_caption"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbright"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/right_view_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/right_view_caption"
            android:textColor="@color/green"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:paddingBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:listitem="@layout/event_list_item" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Sort Events By Rating"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Club/Party/Concert"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adventure Events"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leisure Events"
            android:textColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sports Events"
            android:textColor="@color/white" />

    </com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_search"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_add"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageButton
        android:id="@+id/liked_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_add"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_liked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_button"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_account"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>